# us-sewersheds

./: .Rhistory  .gitignore  README.md  helper_functions.R  helper_functions.py  plot_sewersheds.py  pyproject.toml  setup.cfg  sewersheds_app.py  step1_parameter_categorization.R  step1_parameter_categorization.ipynb  step2_population_served.ipynb  step3_near_exceedence.R  step3_near_exceedence.ipynb  step3_near_exceedence_by_parameter.ipynb  step4_future_limits.R  step4_future_limits.ipynb  step4_impaired_waters_risk.ipynb  step5_update_facilities_list.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test_and_lint.yml
CA_2022CWNS_APR2024/: AREAS_WATERSHED.csv  FACILITIES.csv  FACILITIES_CONFIRMED.csv  FACILITY_TYPES.csv  PHYSICAL_LOCATION.csv  POINT_OF_CONTACT.csv  POPULATION_DECENTRALIZED.csv  POPULATION_WASTEWATER.csv
data/2012/: Discharge_Method_Details.csv  Facility_Details.csv
data/2022CWNS_NATIONAL_APR2024/: AREAS_COUNTY.csv  AREAS_WATERSHED.csv  CET_INPUTS_DECENTRALIZED.csv  CET_INPUTS_WASTEWATER.csv  DISCHARGES.csv  FLOW.csv  PHYSICAL_LOCATION.csv  POPULATION_DECENTRALIZED.csv  POPULATION_WASTEWATER.csv  POPULATION_WASTEWATER_CONFIRMED.csv  REF_CHANGE_TYPES.csv  REF_DOCUMENT_TYPES.csv
data/cwns/: CWNS-Database-Dictionary-April2024.xlsx
data/dmrs/: REF_FREQUENCY_OF_ANALYSIS.csv  (+3 more)
helper_functions/: categorize_parameters.py  import_dmr.py  import_pop_served.py  parameter_sorting_dict.json
processed_data/: REF_Parameter.csv  ciwqs_facilities.csv  cwns_facilities_merged.csv  dmr_esmr_ir_mapping.csv  dmr_esmr_mapping_manual.csv  esmr_parameters.csv  facilities_2022_merged.csv  facilities_list_updated.csv  facilities_list_with_population_served.csv  ir_parameter_list.csv  num_parameters_per_facility.csv  pollutant_names.csv  sewershed_map.pkl
us_sewersheds/: __init__.py  connection_rules.json  facility_type_groups.json  file_configs.json  helpers.py  marimo_app_archive.py  merge_cwns_data.py  plotting_configs.py  sewersheds_app.py  spatial_analysis.py
(+60 files in other folders)
