[tool.poetry]
name = "us-sewersheds"
version = "0.1.0"
description = ""
authors = ["Daly Wettermark <139182397+dalyw@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "us_sewersheds"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
numpy = "^2.2.2"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
