[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-sewersheds"
version = "0.1.2"
description = "Process and analyze US sewershed data from CWNS"
authors = [
    {name = "Daly Wettermark", email = "139182397+dalyw@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = ["sewersheds", "wastewater", "CWNS", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.5.0",
    "networkx>=3.0", 
    "numpy>=1.24.0",
    "streamlit>=1.42.0",
    "plotly>=5.20.0",
    "dash>=2.18.2",
    "dash_cytoscape>=1.0.2",
    "urllib3>=2.0.0",
    "folium>=0.14.0",
    "h3>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "bumpversion",
]

[project.urls]
Homepage = "https://github.com/dalyw/us-sewersheds"
Repository = "https://github.com/dalyw/us-sewersheds"

[tool.setuptools.packages.find]
where = ["."]
include = ["us_sewersheds*"]

[tool.setuptools.package-data]
us_sewersheds = [
    "facility_type_groups.json",
    "connection_rules.json", 
    "file_configs.json"
]

[tool.black]
line-length = 80
